--- a/TrabalhoPratico/Makefile
+++ b/TrabalhoPratico/Makefile
@@ -14,3 +14,11 @@ builder:
 	$(CC) $(LINKER_FLAGS) $(INCLUDE_PATHS) $(LIBRARY_PATHS) $(SRC_FILES) -o $(BUILD_DIR)/$(OBJ_NAME)
 executer:
 	./$(BUILD_DIR)/$(OBJ_NAME)
+
+build-ubuntu:
+	cmake --build build
+
+run-ubuntu:
+	./build/teste
+
+build-and-run: build-ubuntu run-ubuntu
