feat: Plot citizens

--- a/TrabalhoPratico/Makefile
+++ b/TrabalhoPratico/Makefile
@@ -4,21 +4,13 @@ CC = g++
 SRC_FILES = $(wildcard $(SRC_DIR)/*.cpp)
 OBJ_NAME = tp
 INCLUDE_PATHS = -Iinclude
-LIBRARY_PATHS = -L/home/daniel/Área de Trabalho/git/ufvjm/aeds-1/TrabalhoPratico/include/SDL2_image -L/home/daniel/Área de Trabalho/git/ufvjm/aeds-1/TrabalhoPratico/include/SDL2
-COMPILER_FLAGS = -std=c++11
+LIBRARY_PATHS = -L/Users/josineyjunior/Documents/FACULDADE/AEDS/AEDSI/Lista01/TrabalhoPratico/lib/SDL2 -L/Users/josineyjunior/Documents/FACULDADE/AEDS/AEDSI/Lista01/TrabalhoPratico/lib/SDL2_image
+COMPILER_FLAGS = -std=c++20
 LINKER_FLAGS = -lsdl2 -lsdl2_image
 
 all: builder executer
 
 builder:
-	$(CC) $(LINKER_FLAGS) $(INCLUDE_PATHS) $(LIBRARY_PATHS) $(SRC_FILES) -o $(BUILD_DIR)/$(OBJ_NAME)
+	$(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $(INCLUDE_PATHS) $(LIBRARY_PATHS) $(SRC_FILES) -o $(BUILD_DIR)/$(OBJ_NAME)
 executer:
 	./$(BUILD_DIR)/$(OBJ_NAME)
-
-build-ubuntu:
-	cmake --build build
-
-run-ubuntu:
-	./build/teste
-
-build-and-run: build-ubuntu run-ubuntu
